[package]
name = "heartsteel"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1.37"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
hyper-tls = ["reqwest/hyper-tls"]
